# My-SW-Factory

./: .env.example  .gitignore  AGENTS.md  CONTRACT.md  CONTRIBUTING.md  README.md  factory.yaml  pyproject.toml
.cursor/rules/: coding_standards.md  thinking_partner.md
.github/workflows/: ci.yml  deploy.yml  factory.yml  routines.yml  self-heal.yml
.specs/: plan.md  prompt.md
docs/: BEGINNERS-GUIDE.md  GUIA-PRINCIPIANTES.md
factory/: __init__.py  bootstrap.py  cli.py  config.py  github_api.py  integrator.py  orchestrator.py  parsing.py  pipeline.py  state.py  toolchain.py
factory/agents/: __init__.py  ci_analyzer.md  coder.md  conflict_resolver.md  fixer.md  log_analyzer.md  orchestrator.md  quality.md  reviewer.md  security.md
factory/backends/: __init__.py  base.py  claude_backend.py  cursor_backend.py  registry.py
factory/dashboard/: app.py
factory/deploy/: __init__.py  gate.py  runner.py
factory/gates/: __init__.py  merge_policy.py  profiles.py  quality.py  security.py
factory/intake/: __init__.py  webhook.py
factory/metrics/: __init__.py  observe.py  rollup.py  store.py  traces.py  usage.py
factory/sandbox/: __init__.py  executor.py
factory/scheduler/: __init__.py  routines.py  (+1 more)
infra/: README.md
scripts/: init.py
tests/: conftest.py  test_backends.py  test_bootstrap.py  test_config.py  test_dashboard.py  test_deploy.py  test_gates.py  test_intake.py  test_merge_policy.py  test_metrics.py  test_orchestrator.py  test_parsing.py  test_sandbox.py  test_scheduler.py  test_selfheal.py  test_smoke.py  test_state.py  test_toolchain.py
(+9 files in other folders)
