[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "software-factory"
version = "0.1.0"
description = "A self-building, self-healing software factory scaffold: multi-agent orchestration, quality/security gates, self-healing, scheduler, metrics dashboard, and human-gated deploys."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Software Factory contributors" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "click>=8.1",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "httpx>=0.27",
    "APScheduler>=3.10,<4",
    "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
cursor = ["cursor-sdk>=0.1"]
claude = ["claude-agent-sdk>=0.1"]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
factory = "factory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["factory"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
